log: fix word wrap bug log: remove network bloat by abt 10x

--- a/files/assets/css/main.css
+++ b/files/assets/css/main.css
@@ -6408,3 +6408,18 @@ div.markdown {
 		overflow: scroll;
 	}
 }
+
+.modlog-action {
+	display: flex;
+	flex-wrap: wrap;
+	background: var(--gray-600) !important;
+	position: relative;
+	align-items: center;
+	justify-content: space-between;
+	overflow-wrap: anywhere;
+	padding: 1rem 1rem 1rem 1rem;
+}
+
+.modlog-action:not(:first-of-type) {
+	border-top: 1px solid var(--gray-400) !important;
+}
